testData/invalid-files/invalid-ann-tab/030-login.ann
T1	Organization 281 288	YouTubeT1	Organization 281 288	YouTube